tring to fix alignment

--- a/style.css
+++ b/style.css
@@ -180,6 +180,8 @@ form{
 	padding:  0.75em;
 	border: 2px solid #777;
 	border-radius: 0.2em;
+    display: block;
+	color: #222;
 }
 
 input, label, textarea{
@@ -223,7 +225,10 @@ fieldset{
 	border: 1px solid #222;
 	border-radius: 0.2em;
 	display: grid;
-	grid-template-columns: 30px 1fr 30px 1fr;
+	grid-template-columns: 1fr 2fr;
+    text-align: center;
+	padding: 0.5em 0 1em 0.5em;
+	
 }
 
 legend{
@@ -231,8 +236,9 @@ legend{
 }
 
 fieldset label{
-	display: inline;
 	width: 60%;
+    display: inline-block;
+    margin: 0 10px;
 }
 
 fieldset input{
